--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "deploy": "npm run build:client && node api/server.js",
     "build": "npm run build:client && npm run move:client",
+    "lint": "eslint .",
     "test": "react-scripts test",
     "start:server": "nodemon api/server.js --ignore src/ --ignore build/ --ignore public/",
     "start:client": "react-scripts start",
     "build:client": "react-scripts build",
     "move:client": "cp -R build/ public",
-    "git": "node scripts/git.js amytangcodes weightogo"
+    "git:remote:set": "node scripts/git.js amytangcodes weightogo"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/HackerYou/con-ed-full-stack#readme",
   "dependencies": {
+    "@material-ui/core": "^4.7.1",
     "eslint": "^6.6.0",
     "express": "^4.17.1",
     "init-package-json": "^1.10.3",
